# internal/models/requests/update_profile_param.go
@@ -1,7 +1,8 @@
 package requests
 
 type UpdateProfileParam struct {
-	Name     string `json:"name"`
-	Email    string `json:"email" binding:"omitempty,email"`
-	Password string `json:"password"`
+	Name            string `json:"name"`
+	Email           string `json:"email" binding:"omitempty,email"`
+	Password        string `json:"password"`
+	ProfileImageUrl string `json:"profile_image_url" binding:"omitempty,url"`
 }
